--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.0.3",
     "@angular/compiler": "^8.0.3",
     "@angular/core": "^8.0.3",
     "@angular/forms": "^8.0.3",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.0.3",
     "@angular/platform-browser-dynamic": "^8.0.3",
     "@angular/router": "^8.0.3",
+
     "http-headers": "^3.0.2",
+
+    "@material/form-field": "^4.0.0",
+    "hammerjs": "^2.0.8",
     "ngx-toast": "^1.1.4",
     "ngx-toastr": "^10.2.0",
     "rxjs": "~6.4.0",
