--- a/angular.json
+++ b/angular.json
@@ -21,14 +21,20 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "kyiv.34272c8c.json", "input": "./", "output": "./assets/" }
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": []
+            "scripts": [
+
+              "node_modules/chartjs-plugin-datalabels/dist/chartjs-plugin-datalabels.js",
+              "node_modules/chart.js/dist/Chart.js"
+
+            ]
           },
           "configurations": {
             "production": {
