--- a/package.json
+++ b/package.json
@@ -22,11 +22,20 @@
     "@angular/platform-browser-dynamic": "^8.0.3",
     "@angular/router": "^8.0.3",
     "@material/form-field": "^4.0.0",
+    "@types/canvasjs": "^1.9.5",
+    "@types/chartjs": "0.0.31",
+    "angular-bootstrap-md": "^8.10.1",
+    "canvasjs": "^1.8.3",
+    "chart.js": "^2.5.0",
+    "chartjs-plugin-datalabels": "^0.7.0",
+    "datejs": "^1.0.0-rc3",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "http-headers": "^3.0.2",
-
-    "@material/form-field": "^4.0.0",
-    "hammerjs": "^2.0.8",
+    "mdbootstrap": "^4.17.0",
+    "moment": "^2.25.2",
+    "ng-uikit": "^0.1.6",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-toast": "^1.1.4",
     "ngx-toastr": "^10.2.0",
     "rxjs": "~6.4.0",
