sone done and documents

--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,8 @@
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
-
-              "node_modules/chartjs-plugin-datalabels/dist/chartjs-plugin-datalabels.js",
-              "node_modules/chart.js/dist/Chart.js"
-
+              "node_modules/chart.js/dist/Chart.js",
+              "node_modules/chartjs-plugin-datalabels/dist/chartjs-plugin-datalabels.js"
             ]
           },
           "configurations": {
