--- a/package.json
+++ b/package.json
@@ -22,11 +22,18 @@
     "@angular/platform-browser-dynamic": "^8.0.3",
     "@angular/router": "^8.0.3",
     "@material/form-field": "^4.0.0",
+    "@progress/kendo-angular-charts": "^4.1.4",
+    "@progress/kendo-angular-common": "^1.2.2",
+    "@progress/kendo-angular-intl": "^2.0.1",
+    "@progress/kendo-angular-l10n": "^2.0.1",
+    "@progress/kendo-angular-popup": "^3.0.5",
+    "@progress/kendo-drawing": "^1.6.0",
     "@types/canvasjs": "^1.9.5",
     "@types/chartjs": "0.0.31",
     "angular-bootstrap-md": "^8.10.1",
+    "angular-material-fileupload": "^2.0.0",
     "canvasjs": "^1.8.3",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "datejs": "^1.0.0-rc3",
     "font-awesome": "^4.7.0",
